--- a/kakao_api_covid19-map/index.html
+++ b/kakao_api_covid19-map/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+	3b7332ebecac7ec4cfa55fc784f5e249&libraries=clusterer
 <body>
     <div id="map" style="width:100%;height:100vh;"></div>
 
-	<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=3b7332ebecac7ec4cfa55fc784f5e249&libraries=clusterer"></script>
+	<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey="></script>
 	<script>
 		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 		    mapOption = {
